# Pender

./: .gitignore  Cargo.toml  README.md  database.txt  report.sh  sync_aws.sh
.github/workflows/: build_prod.yml  build_staging.yml  pender_build.yml
back/: Cargo.toml  Rocket.toml
back/front/: home.html
back/src/: index.html  main.rs
front/: home.html  home.html.hbs  index.html  navbar.html  navbar.html.hbs  package-lock.json  package.json
front/static/: font.css  home.css  navbar.css
front/templates/: home.html  login.html  navbar.html  profile.html  search.html  upload.html
public/assets/: bg.avif  pets.avif  search-img.avif
public/translations/: cities.json  ge.json  translations.json
scripts/: gen_version.sh  merge.sh  report.sh  run.sh  sync_aws.sh
src/: app_state.rs  imports.rs  main.rs  register_routes.rs
src/api/: api_upload.rs
src/components/: common.rs  navbar.rs
src/config/: config_manager.rs  database.txt  mod.rs
src/routes/: analytics.rs  delete.rs  home.rs  load_posts.rs  login.rs  logout.rs  mod.rs  post.rs  profile.rs  register.rs  reset_password.rs  search.rs  upload.rs  upload_steps.rs  user.rs
src/utils/: auth_struct.rs  cities.rs  common.rs  form_struct.rs  generate_id.rs  language.rs  mod.rs  translations.rs  upload_struct.rs
templates/: home.html  login.html  post.html  profile.html  register.html  reset_password.html  search.html  user.html
templates/components/: auth_header.html  cities.html  email.html  filters.html  footer.html  imports.html  layout.html  navbar.html  paws.html  posts.html  toast.html  upload.html  (+6 more)
(+73 files in other folders)
