[package]
name = "pender-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide-tera = "0.2.4"
tera = "1.19.1"
jwt = "0.16.0"
sha2 = "=0.10.8"
hmac = "=0.12.1"
sqlx = { version = "0.5.13", features = ["runtime-async-std-rustls", "postgres"] }
tide-sqlx = "0.6.1"
pwhash = "1"
uuid = {version = "1.8.0", features = ["v4"]}
tide-governor = "1.0.3"
time = "0.2.0"
lettre = "0.11.6"
rand = "0.8.5"
image-base64 = "0.1.0"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
